--- a/runningmate/.gitignore
+++ b/runningmate/.gitignore
@@ -10,7 +10,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-
+runningmate/addproject/__pycache__/
+runningmate/addproject/__pycache__/modelste.cpython-310.pyc
+runningmate/addproject/__pycache__/views.cpython-310.pyc
+runningmate/db.sqlite3    
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
